--- a/src/assets/scss/components/_toggle-button.scss
+++ b/src/assets/scss/components/_toggle-button.scss
@@ -1,7 +1,5 @@
 button.toggle-button {
-  background-color: transparent;
-  outline: none;
-  border: none;
+  @include button;
 }
 
 button.toggle-button > * {
