--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,11 +1,14 @@
-@import "./base/variables.scss";
-@import './base/base.scss';
 @import './base/mixins.scss';
+@import "./base/variables.scss";
+
+@import './base/base.scss';
+
 @import './base/typography.scss';
 
 @import './components/navbar.scss';
 @import './components/logo.scss';
 @import './components/toggle-button';
+@import './components/close-button';
 
 @import './layout/header.scss';
 @import './layout/offcanvas.scss';
