--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,3 +1,17 @@
 .navbar {
   background-color: black;
 }
+
+.auth-links {
+  & > *:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  & > * {
+    font-weight: $font-weight-semi-bold;
+    color: $white;
+  }
+}
+  
+
+
